feat: transaction domain with shell and feature libraries, lazy loaded

--- a/apps/blockpit-app/src/app/app.component.html
+++ b/apps/blockpit-app/src/app/app.component.html
@@ -1,1 +1,2 @@
-<blockpit-nx-example-nx-welcome></blockpit-nx-example-nx-welcome>
+<!-- <blockpit-nx-example-nx-welcome></blockpit-nx-example-nx-welcome> -->
+<router-outlet></router-outlet>
