feat: spare with method call in the templates

--- a/apps/blockpit-app/src/app/performance/performance.component.html
+++ b/apps/blockpit-app/src/app/performance/performance.component.html
@@ -1,2 +1,5 @@
 <h1>HEllo Performance</h1>
-<blockpit-nx-example-table [user]="user"></blockpit-nx-example-table>
+<blockpit-nx-example-table
+  [user]="user"
+  [transactions]="transcations"
+></blockpit-nx-example-table>
