feat: testing examples

--- a/apps/blockpit-app/src/app/app.component.html
+++ b/apps/blockpit-app/src/app/app.component.html
@@ -1,2 +1,3 @@
+<h1>Welcome blockpit-app</h1>
 <!-- <blockpit-nx-example-nx-welcome></blockpit-nx-example-nx-welcome> -->
 <router-outlet></router-outlet>
