--- a/apps/blockpit-app/src/app/performance/performance.component.html
+++ b/apps/blockpit-app/src/app/performance/performance.component.html
@@ -1,5 +1,5 @@
 <h1>HEllo Performance</h1>
 <blockpit-nx-example-table
   [user]="user"
-  [transactions]="transcations"
+  [transactions]="transactions"
 ></blockpit-nx-example-table>
